--- a/README.me
+++ b/README.me
@@ -2,7 +2,7 @@
 
 
 Ejecutar ```npm install``` para las librerías
-Configurar tus APIs de Google Maps y Weather Maps en ```config/api.js````
+Configurar tus APIs de Google Maps y Weather Maps en ```config/api.js```
 
 ### Ejemplo:
 ```
